--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,42 @@
-# macOS
-.DS_Store
+# Ignore Mill project specific directories and files
+/.mill
+/target
 
-# sbt specific
-dist/*
-target/
-lib_managed/
-src_managed/
-project/boot/
-project/plugins/project/
-project/local-plugins.sbt
-.history
-.ensime
-.ensime_cache/
-.sbt-scripted/
-local.sbt
-
-# Bloop
-.bsp
-
-# VS Code
-.vscode/
-
-# Metals
-.bloop/
-.metals/
-metals.sbt
-
-# IDEA
+# Ignore IntelliJ IDEA specific files and directories
 .idea
-.idea_modules
-/.worksheet/
+
+# Ignore Visual Studio Code specific files and directories
+.vscode
+
+# Ignore Eclipse specific files and directories
+.classpath
+.project
+.settings
+
+# Ignore operating system and editor backup files
+.DS_Store
+*.swp
+*~
+
+# Ignore log files and directories
+logs/
+*.log
+
+# Ignore compiled files and directories
+/out/
+/.bloop/
+/.metals/
+
+# Ignore SBT specific files
+.project
+.target/
+project/project
+project/target
+
+# Ignore dependency directories
+lib_managed/
+target
+
+# Ignore OS-specific files
+.DS_Store
+Th
