--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   zookeeper:
-    image: confluentinc/cp-zookeeper:latest
+    image: docker.io/confluentinc/cp-zookeeper:latest
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
@@ -10,7 +10,7 @@ services:
     networks:
       - kafka-network
   kafka:
-    image: confluentinc/cp-kafka:latest
+    image: docker.io/confluentinc/cp-kafka:latest
     depends_on:
       - zookeeper
     ports:
